--- a/.github/workflows/flutter-nightly.yml
+++ b/.github/workflows/flutter-nightly.yml
@@ -1,10 +1,10 @@
 name: Flutter Nightly Build
 
-on:
-  schedule:
+#on:
+#  schedule:
     # schedule build every night
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+#    - cron: "0 0 * * *"
+#  workflow_dispatch:
 
 jobs:
   run-flutter-nightly-build:
